@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

class Collaborator {
    name
    birthdate
    admissionDate
    address
    contactInfo
    idDocumentType
    idDocumentNumber
}

class HRM {

}

class Skill {
    name
}

class GreenSpace {
    name
    address
    dimension
}

class Garden {
    name
    address
    dimension
}

class MediumSizedPark {
    name
    address
    dimension
}

class LargeSizedPark {
    name
    address
    dimension
}

class Organization {
    name
    address
}

HRM "1" -- "1..*" Skill: creates >
Collaborator "1" - "1..*" Skill: has >
Collaborator <|-- HRM
GreenSpace <|-- Garden
GreenSpace <|-- MediumSizedPark
GreenSpace <|-- LargeSizedPark
Organization "1" -- "1..*" GreenSpace: owns >
Organization "1   " -- "1..*" Collaborator: works for <
@enduml
